[project]
name = "OVCodExtServer"
version = "0.0.1"
requires-python = ">=3.8"

dependencies = [
    'fastapi==0.109.1',
    'uvicorn==0.23.2',
    'torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp38-cp38-linux_x86_64.whl ; sys_platform=="linux" and python_version == "3.8"',
    'torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp39-cp39-linux_x86_64.whl ; sys_platform=="linux" and python_version == "3.9"',
    'torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl ; sys_platform=="linux" and python_version == "3.10"',
    'torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl ; sys_platform=="linux" and python_version == "3.11"',
    'torch ; sys_platform != "linux"',
    'openvino==2024.0.0',
    'transformers==4.36.0',
    'optimum==1.17.1',
    'optimum-intel[openvino]==1.15.0',
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 119
target-versions = ["py38", "py39", "py310", "py311"]


[tool.ruff]
lint.ignore = ["C901", "E501", "E741", "W605", "F401"]
lint.select = ["C", "E", "F", "I", "W"]
lint.extend-safe-fixes = ["F601"]
lint.extend-unsafe-fixes = ["UP034"]
lint.fixable = ["F401"]
line-length = 119


[tool.ruff.lint.isort]
lines-after-imports = 2
